cmake_minimum_required (VERSION 3.10)

project(cppmq_cmake_pro)

# Add sub directories
add_subdirectory(projects)
#add_subdirectory(triangle)
#add_subdirectory(texture)
#add_subdirectory(transform)
#add_subdirectory(coordinate)
#add_subdirectory(coordinate_test)
#add_subdirectory(camera)
#add_subdirectory(camera_test)
#add_subdirectory(poker)
#add_subdirectory(quaternion)


